package com.example.demo.domain.surcharge.superexpress;

import com.example.demo.domain.fare.Yen;

public interface SuperExpress {
    Yen getSuperExpressSurcharge();
}
