@startuml

package surcharge{

 package seat{
 Enum SeatType{
  FreeSeat
  ReservedSeat

  + abstract createSeat(superExpress : SuperExpress) : Seat
 }

 SeatType o--> Seat

 interface Seat{
  + getSeatSurcharge()
 }

 class FreeSeat implements Seat{
  - Hikari
  + getSeatSurcharge() : Yen
 }

 class ReservedSeat implements Seat{
  - SuperExpress
  + getSeatSurcharge() : Yen
 }
 }

 package superexpress{
 Enum ShinkansenType {
   Hikari
   Nozomi

   + abstract createSuperExpress(destination : Destination) : SuperExpress
  }

  ShinkansenType o--> SuperExpress

 interface SuperExpress{
  + getSuperExpressSurcharge() : Yen
 }

 Enum Hikari implements SuperExpress{
  ShinOsaka
  Himeji
  + getSuperExpressSurcharge() : Yen
 }

 Enum Nozomi implements SuperExpress{
  ShinOsaka
  Himeji
  + getSuperExpressSurcharge() : Yen
 }

 ReservedSeat o--> SuperExpress
 FreeSeat o--> Hikari
 }
}

@enduml